# url2tldr

./: LICENSE  README.md  app.py  changelog.md  pyproject.toml  requirements.txt
assets/: style.css
src/url2tldr/: app.py
