[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "url2tldr"
version = "0.1.8" # Version for pip
description = "Dash app for generating TL;DR summaries from URLs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "youtube-transcript-api",
    "requests",
    "pandas",
    "yt-dlp",
    "ollama",
]

[project.scripts]
url2tldr = "url2tldr.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
url2tldr = ["assets/*"]



